Fix problem with yearly calendar, not showing previous months

--- a/src/Pages/AuthPage/LoginTab/LoginTab.module.less
+++ b/src/Pages/AuthPage/LoginTab/LoginTab.module.less
@@ -1,8 +1,5 @@
 @import "~antd/lib/style/themes/dark.less";
+
 .icon {
   color: @input-placeholder-color;
-}
-
-.forgot {
-  float: right;
 }
